Java 19 + Loom Test + Dependencies