@@ -29,16 +29,16 @@ group 'org.ish'
 version '1.1.0'
 apply plugin: 'java'
 
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = 19
+targetCompatibility = 19
 
 
 compileJava {
-    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]
+    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview", "--add-modules", "jdk.incubator.concurrent"]
 
 }
 compileTestJava {
-    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview"]
+    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview", "--add-modules", "jdk.incubator.concurrent"]
 
 }
 test {
@@ -57,38 +57,41 @@ dependencies {
     implementation group: 'org.knowm.xchart', name: 'xchart', version: '3.8.1'
 
 
-    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.0.0'
+    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.1.0'
 
-    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha10'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha16'
 
 
-    implementation group: 'com.github.Walkyst', name: 'lavaplayer-fork', version: '67bfdc4757947db61105c73628f2e4c2a7e4e992'
+    implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:1.3.98.1'
 
     // Audio
     implementation 'com.github.natanbc:lavadsp:0.7.7'
-    implementation 'com.sedmelluq:lavaplayer-ext-youtube-rotator:0.2.3'
+    implementation('com.sedmelluq:lavaplayer-ext-youtube-rotator:0.2.3') {
+        exclude module: 'lavaplayer'
+    }
+
     implementation 'com.sedmelluq:jda-nas:1.1.0'
 
-    implementation 'com.github.ben-manes.caffeine:caffeine:3.0.5'
+    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'
 
     implementation 'com.neovisionaries:nv-i18n:1.29'
     implementation 'com.github.ishwi:java-eval:8de726df14c18523912aa6ff21bfd1b0b7d54924'
-    implementation group: 'com.google.guava', name: 'guava', version: '30.1.1-jre'
-    implementation("net.dv8tion:JDA:5.0.0-alpha.5")
+    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation("net.dv8tion:JDA:5.0.0-alpha.13")
 
-    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.2'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'
 
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-    implementation group: 'org.json', name: 'json', version: '20210307'
-    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.116'
-    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.7.0'
-    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.7.0'
-    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-webp', version: '3.7.0'
+    implementation group: 'org.json', name: 'json', version: '20220320'
+    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.147'
+    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.8.2'
+    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.8.2'
+    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-webp', version: '3.8.2'
     implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
     implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.14'
     implementation group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.14'
     implementation group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.14'
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
     implementation("com.github.minndevelopment:emoji-java:master-SNAPSHOT")
 // https://mvnrepository.com/artifact/com.opencsv/opencsv
     implementation 'org.apache.commons:commons-csv:1.9.0'
@@ -96,11 +99,11 @@ dependencies {
 
     // TEST
 // https://mvnrepository.com/artifact/org.awaitility/awaitility
-    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.1.0'
+    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
     testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'
 
 // https://mvnrepository.com/artifact/org.ow2.asm/asm
-    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.2'
+    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.3'
 
 // https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
     testImplementation group: 'org.graphwalker', name: 'graphwalker-core', version: '4.3.1'
@@ -110,11 +113,11 @@ dependencies {
 // https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
     //a
     testImplementation group: 'com.pholser', name: 'junit-quickcheck-core', version: '1.0'
-    testImplementation 'org.mockito:mockito-core:4.2.0'
+    testImplementation 'org.mockito:mockito-core:4.6.1'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 
-    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.33'
-    testAnnotationProcessor group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.33'
+    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.35'
+    testAnnotationProcessor group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.35'
 
 
 }
